[package]
edition = "2021"
name = "window-dot-velocity"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_prototype_lyon = "0.4"
rand = "0.8"
winit = "0.26"

[dependencies.bevy_rapier2d]
features = ["render"]
version = "0.12"
