[package]
edition = "2021"
name = "window-dot-velocity"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_prototype_lyon = "0.8"
bevy_rapier2d = {version="0.21", features=["debug-render-2d"]}
rand = "0.8"
winit = "0.28"
